Updating links and images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/main.css">
+
     <title>untitledTitle</title>
 </head>
 
@@ -11,32 +15,44 @@
 <body>
 
     <header>
-        <a href="#">DEV.</a>
+        <a href="#home">untitledTitle.</a>
 
         <nav class="nav">
             <ul class="nav-list">
-                <li>About</li>
-                <li>Projects</li>
-                <li>Contact</li>
+                <li class="nav-link">About</li>
+                <li class="nav-link">Projects</li>
+                <li class="nav-link">Contact</li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="about-me">
-            <img src="#" alt="owner of the page">
+            <img src="#" alt="owner of the page" class="about-img">
             <h1>Welcome to untitledTitle.</h1>
             <p>Duis sed urna vel ante sollicitudin viverra. Aenean sodales nisi ut fringilla gravida. Donec imperdiet ullamcorper metus, non vulputate ante consectetur eu. Nam nulla nibh, semper sit amet quam vel, interdum placerat elit. Ut tempus, erat id venenatis consequat, nisi nibh efficitur risus, id tincidunt nisi arcu ut justo. Vivamus vitae leo vel lorem imperdiet pharetra non venenatis orci. Ut porta risus lorem, quis commodo lectus aliquam a. Nam facilisis et urna ut feugiat. Phasellus eu elit nisi.</p>
         </section>
 
         <section class="project-section">
             <div class="projects">
-                <a href="#" alt="project"></a>
-                <a href="#" alt="project"></a>
-                <a href="#" alt="project"></a>
-                <a href="#" alt="project"></a>
-                <a href="#" alt="project"></a>
-                <a href="#" alt="project"></a>
+                <a href="#" class="project-link">
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
+                <a href="#" alt="project">
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
+                <a href="#" alt="project">
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
+                <a href="#" alt="project">
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
+                <a href="#" alt="project">
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
+                <a href="#" alt="project">                    
+                    <img src="img/portfolio.png" alt="project" class="project-img">
+                </a>
             </div>
             <button>Click for more..</button>
         </section>
@@ -53,6 +69,11 @@
     </main>
 
     <footer>
+        <ul class="social-links">
+            <li><a href="https://github.com/nicolekovacs"></a></li>
+            <li><a href="https://twitter.com/nessiekovacs"></a></li>
+            <li><a href="https://instagram.com/nessiekovacs"></a></li>
+        </ul>
         <h4>made with love.</h4>
     </footer>
 </body>
