Added general styles, styled nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
 
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
+
     <title>untitledTitle</title>
 </head>
 
@@ -15,9 +17,10 @@
 <body>
 
     <header>
-        <a href="#home">untitledTitle.</a>
-
         <nav class="nav">
+        <a class="logo" href="#home">untitledTitle.</a>
+
+        
             <ul class="nav-list">
                 <li class="nav-link">About</li>
                 <li class="nav-link">Projects</li>
@@ -28,10 +31,14 @@
 
     <main>
         <section class="about-me">
-            <img src="#" alt="owner of the page" class="about-img">
-            <h1>Welcome to untitledTitle.</h1>
-            <p>Duis sed urna vel ante sollicitudin viverra. Aenean sodales nisi ut fringilla gravida. Donec imperdiet ullamcorper metus, non vulputate ante consectetur eu. Nam nulla nibh, semper sit amet quam vel, interdum placerat elit. Ut tempus, erat id venenatis consequat, nisi nibh efficitur risus, id tincidunt nisi arcu ut justo. Vivamus vitae leo vel lorem imperdiet pharetra non venenatis orci. Ut porta risus lorem, quis commodo lectus aliquam a. Nam facilisis et urna ut feugiat. Phasellus eu elit nisi.</p>
+            <div class="aboutme-bubble">
+                <img src="img/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="owner of the page / Photo by Mateus Campos Felipe on Unsplash" class="about-img">
+                <h1>Welcome to untitledTitle.</h1>
+                <p>Duis sed urna vel ante sollicitudin viverra. Aenean sodales nisi ut fringilla gravida. Donec imperdiet ullamcorper metus, non vulputate ante consectetur eu. Nam nulla nibh, semper sit amet quam vel, interdum placerat elit. Ut tempus, erat id venenatis consequat, nisi nibh efficitur risus, id tincidunt nisi arcu ut justo. Vivamus vitae leo vel lorem imperdiet pharetra non venenatis orci. Ut porta risus lorem, quis commodo lectus aliquam a. Nam facilisis et urna ut feugiat. Phasellus eu elit nisi.</p>
+            </div>
         </section>
+
+        <h2>Let's see some action - Check my work</h2>
 
         <section class="project-section">
             <div class="projects">
@@ -54,11 +61,14 @@
                     <img src="img/portfolio.png" alt="project" class="project-img">
                 </a>
             </div>
-            <button>Click for more..</button>
         </section>
 
+        <div class="more-button">
+            <button>Click for more..</button>
+        </div>
+
         <section class="contact">
-            <h2>CONTACT</h2>
+            <h3>CONTACT</h3>
             <form>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name"><br>
