Nav links are functional and animated

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
         
             <ul class="nav-list">
-                <li class="nav-link">About</li>
-                <li class="nav-link">Projects</li>
-                <li class="nav-link">Contact</li>
+                <li class="nav-link"><a href="#about">About</a></li>
+                <li class="nav-link"><a href="#project-title">Projects</a></li>
+                <li class="nav-link"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="about-me">
+        <section class="about" id="about">
             <div class="aboutme-bubble">
                 <img src="img/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="owner of the page / Photo by Mateus Campos Felipe on Unsplash" class="about-img">
                 <h1>Welcome to untitledTitle.</h1>
@@ -41,7 +41,7 @@
         </section>
 
         <div class="project-container">
-        <div class="project-title">
+        <div class="project-title" id="project-title">
         <h2>Let's see some action - Check my work</h2>
         </div>
         </div>
@@ -73,7 +73,7 @@
             <a href="#" class="more-button">More..</a>
         </div>
 
-        <section class="contact">
+        <section class="contact" id="contact">
             <h3>CONTACT</h3>
             <form class="contact-form">
                 <label for="name">Name:</label><br>
