Updating placeholder imgs and animating them

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         <section class="project-section">
             <div class="projects">
                 <a href="#" class="project-link">
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">                    
-                    <img src="img/portfolio.png" alt="project" class="project-img">
+                    <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project" class="project-img">
                 </a>
             </div>
         </section>
