--- a/index.html
+++ b/index.html
@@ -73,15 +73,58 @@
             <a href="#" class="more-button">More..</a>
         </div>
 
-        <section class="contact" id="contact">
-            <h3>CONTACT</h3>
+        <!-- divider from Ema CodePen codepen.io/emared/pen/gWGBLR-->
+        <section class="divider">
+          <div class="row dark-blue">
+            <div>
+              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep3" viewBox="0 0 1600 100" style="display: block;" data-height="100">
+          <path class="" style="opacity: 1;fill: #273a4c;" d="M-40,71.627C20.307,71.627,20.058,32,80,32s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,26H-60V72L-40,71.627z"></path>
+          <path class="" style="opacity: 1;fill: #2a3f54;" d="M-40,83.627C20.307,83.627,20.058,44,80,44s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,14H-60V84L-40,83.627z"></path>
+          <path class="" style="fill: rgb(34, 49, 63);" d="M-40,95.627C20.307,95.627,20.058,56,80,56s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,138H-60V96L-40,95.627z"></path></svg>
+            </div>
+          </div>
+          <div class="row green2">
+            <div>
+              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep4" viewBox="0 0 1600 200" style="display: block;" data-height="200">
+          <polygon class="" style="fill: rgb(27, 188, 155);" points="886,86 800,172 714,86 -4,86 -4,204 1604,204 1604,86 "></polygon> 
+          <polygon class="" style="opacity: 1;fill: #0e9382;" points="800,172 886,86 900,86 800,186 700,86 714,86 "></polygon> 
+          <polygon class="" style="opacity: 1;fill: #14a084;" points="800,162 876,86 888,86 800,174 712,86 724,86 "></polygon></svg>
+            </div>
+          </div>
+          <div class="row">
+            <div>
+              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep5" viewBox="0 0 1600 200" style="display: block;" data-height="100">
+          <polygon class="" style="fill: rgb(255, 255, 255);" points="1488,134 1304,100 1068,152 909.935,92.044 672,198 364,142 242,32 -4,95 -4,204 1604,204 1604,0 "></polygon> 
+          <polygon class="" style="opacity: 1;fill: #95a5a6;" points="672,198 364,142 242,32 -4,95 -4,82.333 242,32 374,136 "></polygon> 
+          <polygon class="" style="opacity: 1;fill: #95a5a6;" points="894,86 672,198 909.935,92.044 "></polygon> 
+          <polygon class="" style="opacity: 1;fill: #6c7a89;" points="1068,152 1302,86 1486,126 1604,0 1488,134 1304,100 "></polygon></svg>
+            </div>
+          </div>
+        </section>
+
+        <section class="contact-section" id="contact">
+            <div class="contact">
+            <div class="contact-title">
+                <h3>Contact</h3>
+            </div>
+            </div>
             <form class="contact-form">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name"><br>
-                <label for="email">E-mail address:</label><br>
-                <input type="email" id="email" name="email"><br>
-                <label for="text" textarea="500">Message:</label><br>
-                <input type="text" id="message" name="message">
+                <div class="personal-info">
+                    <div class="name">
+                        <label for="name">Name:</label><br>
+                        <input type="text" id="name" name="name" placeholder="Name" required><br>
+                    </div>  
+                    <div class="email">
+                        <label for="email">E-mail address:</label><br>
+                        <input type="email" id="email" name="email" placeholder="E-mail address" required><br>
+                    </div>
+                </div>
+                <div class="message">
+                    <label for="textarea">Message:</label><br>
+                    <textarea id="message" name="message" placeholder="Write your message here..." required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">Submit Form</button>
+                <button type="reset" class="reset-btn">Reset Form</button>
             </form>
         </section>
     </main>
