Scrapped more button and so divider too

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Oswald:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
     <title>untitledTitle</title>
 </head>
@@ -69,38 +69,10 @@
             </div>
         </section>
 
-        <div class="button">
+        <!-- <div class="button">
             <a href="#" class="more-button">More..</a>
-        </div>
+        </div> -->
 
-        <!-- divider from Ema CodePen codepen.io/emared/pen/gWGBLR-->
-        <section class="divider">
-          <div class="row dark-blue">
-            <div>
-              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep3" viewBox="0 0 1600 100" style="display: block;" data-height="100">
-          <path class="" style="opacity: 1;fill: #273a4c;" d="M-40,71.627C20.307,71.627,20.058,32,80,32s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,26H-60V72L-40,71.627z"></path>
-          <path class="" style="opacity: 1;fill: #2a3f54;" d="M-40,83.627C20.307,83.627,20.058,44,80,44s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,14H-60V84L-40,83.627z"></path>
-          <path class="" style="fill: rgb(34, 49, 63);" d="M-40,95.627C20.307,95.627,20.058,56,80,56s60.003,40,120,40s59.948-40,120-40s60.313,40,120,40s60.258-40,120-40s60.202,40,120,40s60.147-40,120-40s60.513,40,120,40s60.036-40,120-40c59.964,0,60.402,40,120,40s59.925-40,120-40s60.291,40,120,40s60.235-40,120-40s60.18,40,120,40s59.82,0,59.82,0l0.18,138H-60V96L-40,95.627z"></path></svg>
-            </div>
-          </div>
-          <div class="row green2">
-            <div>
-              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep4" viewBox="0 0 1600 200" style="display: block;" data-height="200">
-          <polygon class="" style="fill: rgb(27, 188, 155);" points="886,86 800,172 714,86 -4,86 -4,204 1604,204 1604,86 "></polygon> 
-          <polygon class="" style="opacity: 1;fill: #0e9382;" points="800,172 886,86 900,86 800,186 700,86 714,86 "></polygon> 
-          <polygon class="" style="opacity: 1;fill: #14a084;" points="800,162 876,86 888,86 800,174 712,86 724,86 "></polygon></svg>
-            </div>
-          </div>
-          <div class="row">
-            <div>
-              <svg id="" preserveAspectRatio="xMidYMax meet" class="svg-separator sep5" viewBox="0 0 1600 200" style="display: block;" data-height="100">
-          <polygon class="" style="fill: rgb(255, 255, 255);" points="1488,134 1304,100 1068,152 909.935,92.044 672,198 364,142 242,32 -4,95 -4,204 1604,204 1604,0 "></polygon> 
-          <polygon class="" style="opacity: 1;fill: #95a5a6;" points="672,198 364,142 242,32 -4,95 -4,82.333 242,32 374,136 "></polygon> 
-          <polygon class="" style="opacity: 1;fill: #95a5a6;" points="894,86 672,198 909.935,92.044 "></polygon> 
-          <polygon class="" style="opacity: 1;fill: #6c7a89;" points="1068,152 1302,86 1486,126 1604,0 1488,134 1304,100 "></polygon></svg>
-            </div>
-          </div>
-        </section>
 
         <section class="contact-section" id="contact">
             <div class="contact">
@@ -131,11 +103,12 @@
 
     <footer>
         <ul class="social-links">
-            <p><a href="https://github.com/nicolekovacs" target="_blank"><img src="img/github-square-brands.svg" alt="github logo" class="social-logos"></a></p>
-            <p><a href="https://twitter.com/nessiekovacs" target="_blank"><img src="img/twitter-square-brands.svg" alt="twitter logo" class="social-logos"></a></p>
-            <p><a href="https://linkedin.com/in/nicolekovacs" target="_blank"><img src="img/linkedin-brands.svg" alt="linkedin logo" class="social-logos"></a></p>
-            <p><a href="https://instagram.com/nessiekovacs" target="_blank"><img src="img/instagram-square-brands.svg" alt="instagram logo" class="social-logos"></a></p>
+            <li><a href="https://github.com/nicolekovacs" target="_blank"><img src="img/github-square-brands.svg" alt="github logo" class="social-logos"></a></li>
+            <li><a href="https://twitter.com/nessiekovacs" target="_blank"><img src="img/twitter-square-brands.svg" alt="twitter logo" class="social-logos"></a></li>
+            <li><a href="https://linkedin.com/in/nicolekovacs" target="_blank"><img src="img/linkedin-brands.svg" alt="linkedin logo" class="social-logos"></a></li>
+            <li><a href="https://instagram.com/nessiekovacs" target="_blank"><img src="img/instagram-square-brands.svg" alt="instagram logo" class="social-logos"></a></li>
         </ul>
+
         <p>made with <span class="emoji">💖 & ☕</span> by nicole k.</p>
     </footer>
 </body>
