Edited main pic, added new page for project wtih basic styling

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <main>
         <section class="about" id="about">
             <div class="aboutme-bubble">
-                <img src="img/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" alt="owner of the page / Photo by Mateus Campos Felipe on Unsplash" class="about-img">
+                <img src="img/mateus-campos-felipe-unsplash-square.jpg" alt="owner of the page / Photo by Mateus Campos Felipe on Unsplash" class="about-img">
                 <h1>Welcome to untitledTitle.</h1>
-                <p>Duis sed urna vel ante sollicitudin viverra. Aenean sodales nisi ut fringilla gravida. Donec imperdiet ullamcorper metus, non vulputate ante consectetur eu. Nam nulla nibh, semper sit amet quam vel, interdum placerat elit. Ut tempus, erat id venenatis consequat, nisi nibh efficitur risus, id tincidunt nisi arcu ut justo. Vivamus vitae leo vel lorem imperdiet.</p>
+                <p>Duis sed urna vel ante sollicitudin viverra. Aenean sodales nisi ut fringilla gravida. Donec imperdiet ullamcorper metus, non vulputate ante consectetur eu. Nam nulla nibh, semper sit amet quam vel, interdum placerat elit. Ut tempus, erat id venenatis consequat, nisi nibh efficitur risus, id tincidunt nisi arcu ut justo. Vivamus vitae leo vel lorem imperdiet. Aut saepe voluptas qui adipisci qui beatae magnam in laborum aperiam et quas dolorem id repudiandae sunt est quod veniam. Ut nihil officiis non sequi temporibus et natus iste quo doloremque quia?</p>
             </div>
         </section>
 
@@ -48,7 +48,7 @@
 
         <section class="project-section">
             <div class="projects">
-                <a href="#" class="project-link">
+                <a href="project-one.html" class="project-link">
                     <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project" class="project-img">
                 </a>
                 <a href="#" alt="project">
@@ -68,11 +68,6 @@
                 </a>
             </div>
         </section>
-
-        <!-- <div class="button">
-            <a href="#" class="more-button">More..</a>
-        </div> -->
-
 
         <section class="contact-section" id="contact">
             <div class="contact">
