Fixed layout of the extra page

--- a/project-one.html
+++ b/project-one.html
@@ -33,12 +33,16 @@
 
     <main>
         <section class="project-showcase">
-            <div class="project-individual">
+            <div class="project-top">
                 <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project picture">
 
                 <p>Qui accusantium eveniet qui doloribus Quis eos placeat quia et repellat suscipit vel obcaecati vitae sed voluptatem dolorem. Quo modi ratione est voluptatem ipsum et deserunt optio non incidunt veniam non odit molestiae sed aperiam doloremque et quam. Quo tenetur enim et doloribus nemo nam modi voluptatem cum quos eveniet At architecto deleniti eos commodi dicta. Quo sapiente fugit qui sequi quia vel voluptatum ipsum et deserunt obcaecati rem deleniti soluta qui quod minus.</p>
-                <br>
+            </div>
+
+            <div class="project-bottom">
                 <p>Qui accusantium eveniet qui doloribus Quis eos placeat quia et repellat suscipit vel obcaecati vitae sed voluptatem dolorem. Quo modi ratione est voluptatem ipsum et deserunt optio non incidunt veniam non odit molestiae sed aperiam doloremque et quam. Quo tenetur enim et doloribus nemo nam modi voluptatem cum quos eveniet At architecto deleniti eos commodi dicta. Quo sapiente fugit qui sequi quia vel voluptatum ipsum et deserunt obcaecati rem deleniti soluta qui quod minus.</p>
+
+                <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project picture">
             </div>
         </section>
     </main>
