Fixed file paths, added home button for the project page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <nav class="nav">
-        <a class="logo" href="#home">untitledTitle.</a>
+        <a class="logo" href="index.html">untitledTitle.</a>
 
         
             <ul class="nav-list">
