--- a/project-one.html
+++ b/project-one.html
@@ -20,13 +20,14 @@
 
     <header>
         <nav class="nav">
-        <a class="logo" href="#home">untitledTitle.</a>
+        <a class="logo" href="index.html">untitledTitle.</a>
 
         
             <ul class="nav-list">
-                <li class="nav-link"><a href="#about">About</a></li>
-                <li class="nav-link"><a href="#project-title">Projects</a></li>
-                <li class="nav-link"><a href="#contact">Contact</a></li>
+                <li class="nav-link"><a href="index.html">Home</a></li>
+                <li class="nav-link"><a href="index.html#about">About</a></li>
+                <li class="nav-link"><a href="index.html#project-title">Projects</a></li>
+                <li class="nav-link"><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
