Created individual project pages, tested file paths

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
                 <a href="project-one.html" class="project-link">
                     <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project" class="project-img">
                 </a>
-                <a href="#" alt="project">
+                <a href="project-two.html" alt="project">
                     <img src="img/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="project" class="project-img">
                 </a>
-                <a href="#" alt="project">
+                <a href="project-three.html" alt="project">
                     <img src="img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="project" class="project-img">
                 </a>
-                <a href="#" alt="project">
+                <a href="project-three.html" alt="project">
                     <img src="img/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="project" class="project-img">
                 </a>
-                <a href="#" alt="project">
+                <a href="project-two.html" alt="project">
                     <img src="img/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="project" class="project-img">
                 </a>
-                <a href="#" alt="project">                    
+                <a href="project-one.html" alt="project">                    
                     <img src="img/ian-dooley-DJ7bWa-Gwks-unsplash.jpg" alt="project" class="project-img">
                 </a>
             </div>
