--- a/index.html
+++ b/index.html
@@ -22,17 +22,32 @@
         <nav class="nav">
         <a class="logo" href="index.html">untitledTitle.</a>
 
-        
             <ul class="nav-list">
-                <li class="nav-link"><a href="#about">About</a></li>
-                <li class="nav-link"><a href="#project-title">Projects</a></li>
-                <li class="nav-link"><a href="#contact">Contact</a></li>
+                <li class="nav-link"><a href="#about-title">About</a></li>
+                <div class="dropdown">
+                <li class="nav-link"><a href="#project-title"><button class="dropdown-btn">Projects
+                    <i class="fa fa-caret-down"></i>
+                    </button>
+                </a></li>
+                  <div class="dropdown-content">
+                    <a href="project-one.html">Project 1</a>
+                    <a href="project-two.html">Project 2</a>
+                    <a href="project-three.html">Project 3</a>
+                  </div>
+                </div>
+                <li class="nav-link"><a href="#contact-title">Contact</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="about" id="about">
+        <section class="about" id="about-title">
+            <div id="mySidenav" class="sidenav">
+                <a href="index.html" id="home">Home</a>
+                <a href="#about-title" id="about">About</a>
+                <a href="#project-title" id="projects">Projects</a>
+                <a href="#contact-title" id="contact">Contact</a>
+              </div>
             <div class="aboutme-bubble">
                 <img src="img/mateus-campos-felipe-unsplash-square.jpg" alt="owner of the page / Photo by Mateus Campos Felipe on Unsplash" class="about-img">
                 <h1>Welcome to untitledTitle.</h1>
@@ -69,7 +84,7 @@
             </div>
         </section>
 
-        <section class="contact-section" id="contact">
+        <section class="contact-section" id="contact-title">
             <div class="contact">
             <div class="contact-title">
                 <h3>Contact</h3>
