--- a/project-two.html
+++ b/project-two.html
@@ -23,16 +23,31 @@
         <a class="logo" href="index.html">untitledTitle.</a>
 
         
-            <ul class="nav-list">
-                <li class="nav-link"><a href="index.html">Home</a></li>
-                <li class="nav-link"><a href="index.html#about">About</a></li>
-                <li class="nav-link"><a href="index.html#project-title">Projects</a></li>
-                <li class="nav-link"><a href="index.html#contact">Contact</a></li>
-            </ul>
+        <ul class="nav-list">
+            <li class="nav-link"><a href="index.html">Home</a></li>
+            <li class="nav-link"><a href="index.html#about-title">About</a></li>
+            <div class="dropdown">
+            <li class="nav-link"><a href="index.html#project-title"><button class="dropdown-btn">Projects
+                <i class="fa fa-caret-down"></i>
+                </button>
+            </a></li>
+              <div class="dropdown-content">
+                <a href="project-one.html">Project 1</a>
+                <a href="project-three.html">Project 3</a>
+              </div>
+            </div>
+            <li class="nav-link"><a href="index.html#contact-title">Contact</a></li>
+        </ul>
         </nav>
     </header>
 
     <main>
+        <div id="mySidenav" class="sidenav">
+            <a href="index.html" id="home">Home</a>
+            <a href="index.html#about-title" id="about">About</a>
+            <a href="index.html#project-title" id="projects">Projects</a>
+            <a href="index.html#contact-title" id="contact">Contact</a>
+          </div>
         <section class="project-showcase">
             <div class="project-top">
                 <img src="img/marvin-meyer-SYTO3xs06fU-unsplash.jpg" alt="project picture">
